[package]
name = "bevy_chess"
version = "0.1.0"
authors = ["You <your@emailhere.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.14"
bevy_math = "0.16.0"
bevy_mod_picking = "0.20.1"  # ← pick the latest 0.20.x
